[tool.poetry]
name = "imageuploader"
version = "1.0.0"
description = ""
authors = ["vcokltfre <vcokltfre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
python-dotenv = "^0.17.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
